syntax = "proto3";

package dnd.bot.api.v1alpha1;

option go_package = "dnd/bot/api/v1alpha1;dndbotv1alpha1api";

service AminAPI{
  rpc GetRoom(GetRoomRequest) returns (GetRoomResponse) {}
  rpc ListRooms(ListRoomsRequest) returns (ListRoomsResponse) {}
  rpc CreateRoom(CreateRoomRequest) returns (CreateRoomResponse) {}
  rpc UpdateRoom(UpdateRoomRequest) returns (UpdateRoomResponse) {}
  rpc DeleteRoom(DeleteRoomRequest) returns (DeleteRoomResponse) {}
}

message GetRoomRequest {
  string id = 1;
}

message GetRoomResponse {
  Room room = 1;
}

message ListRoomsRequest {
  string name = 1;
  int32 limit = 2;
  string page_token = 3;
}

message ListRoomsResponse {
  repeated Room rooms = 1;
  string next_page_token = 2;
}

message CreateRoomRequest {
  Room room = 1;
}

message CreateRoomResponse {
  Room room = 1;
}

message UpdateRoomRequest {
  Room room = 1;
}

message UpdateRoomResponse {
  Room room = 1;
}

message DeleteRoomRequest {
  string id = 1;
}

message DeleteRoomResponse {
  string id = 1;
}

message Room {
  string id = 1;
  string name = 2;
  string description = 3;
}
